--- a/index.html
+++ b/index.html
@@ -473,11 +473,11 @@
         <!-- Header -->
         <header class="header">
             <div class="profile-image">
-                👤
+                <img src="image.png" alt="Profile" style="width:100%;height:100%;object-fit:cover;border-radius:12px;" />
             </div>
             <div class="header-content">
-                <h1>Your Name</h1>
-                <div class="title">Senior Software Engineer</div>
+                <h1>Vanessa Reyes</h1>
+                <div class="title">Software Engineer</div>
             </div>
         </header>
 
@@ -486,9 +486,10 @@
             <h2 class="section-title">Bio</h2>
             <div class="bio-content">
                 <p>
-                    Passionate software engineer with 8+ years of experience building scalable web applications and cloud infrastructure. 
-                    Specialized in full-stack development with a focus on modern JavaScript frameworks, AWS services, and DevOps practices. 
-                    Strong advocate for clean code, automated testing, and continuous improvement.
+                    Experienced in object oriented design patterns and the stages of the software development life cycle. Skilled in AWS Cloud Solutions, DevOps, AI/ML, and Back-End Programming.
+                </p>
+                <p style="margin-top: 12px;">
+                    <strong>Key Skills:</strong> Software Design, Continuous Integration (CI), Back-End Web Development
                 </p>
             </div>
         </section>
@@ -499,17 +500,17 @@
                 <!-- AWS Certifications Box (1/4 left) -->
                 <div class="certifications-box">
                     <div class="cert-grid">
-                        <a href="https://www.credly.com/badges/your-badge-id-1" target="_blank" rel="noopener noreferrer" class="cert-item">
-                            <img src="https://via.placeholder.com/150x150/0A4D8C/ffffff?text=AWS+SAA" alt="AWS Solutions Architect Associate">
+                        <a href="https://www.credly.com/earner/earned/badge/50b4ec70-c4e6-4894-863f-3ee10fc7a040" target="_blank" rel="noopener noreferrer" class="cert-item">
+                            <img src="aws_cp.png" alt="AWS Cloud Practitioner">
                         </a>
-                        <a href="https://www.credly.com/badges/your-badge-id-2" target="_blank" rel="noopener noreferrer" class="cert-item">
-                            <img src="https://via.placeholder.com/150x150/1E88E5/ffffff?text=AWS+Dev" alt="AWS Developer Associate">
+                        <a href="https://www.credly.com/badges/7cbdc1a1u-aa82-46f0-b711-544717557696" target="_blank" rel="noopener noreferrer" class="cert-item">
+                            <img src="aws_da.png" alt="AWS Certified Developer – Associate">
                         </a>
                         <a href="https://www.credly.com/badges/your-badge-id-3" target="_blank" rel="noopener noreferrer" class="cert-item">
-                            <img src="https://via.placeholder.com/150x150/0A4D8C/ffffff?text=AWS+SysOps" alt="AWS SysOps Administrator">
+                            <img src="finops.png" alt="FinOps Trained Engineer">
                         </a>
                         <a href="https://www.credly.com/badges/your-badge-id-4" target="_blank" rel="noopener noreferrer" class="cert-item">
-                            <img src="https://via.placeholder.com/150x150/1E88E5/ffffff?text=AWS+SAP" alt="AWS Solutions Architect Professional">
+                            <img src="aws_sa.png" alt="AWS Solutions Architect Professional">
                         </a>
                     </div>
                 </div>
@@ -532,38 +533,18 @@
         <!-- Experience Section -->
         <section class="section">
             <h2 class="section-title">Experience</h2>
-            
-            <div class="experience-item">
-                <div class="experience-header">
-                    <div>
-                        <div class="experience-title">Senior Software Engineer</div>
-                        <div class="company">Tech Company Inc.</div>
-                    </div>
-                    <div class="date">2021 - Present</div>
-                </div>
-                <div class="description">
-                    <ul>
-                        <li>Led development of microservices architecture serving 2M+ daily active users</li>
-                        <li>Architected and deployed cloud infrastructure on AWS using Terraform and CloudFormation</li>
-                        <li>Mentored team of 5 junior developers on best practices and code review processes</li>
-                        <li>Reduced deployment time by 60% through CI/CD pipeline optimization</li>
-                    </ul>
-                </div>
-            </div>
 
             <div class="experience-item">
                 <div class="experience-header">
                     <div>
                         <div class="experience-title">Software Engineer</div>
-                        <div class="company">Startup Solutions LLC</div>
+                        <div class="company">State Farm · Full-time</div>
                     </div>
-                    <div class="date">2018 - 2021</div>
+                    <div class="date">May 2023 - Present</div>
                 </div>
                 <div class="description">
                     <ul>
-                        <li>Built responsive web applications using React, Node.js, and PostgreSQL</li>
-                        <li>Implemented automated testing suite achieving 85% code coverage</li>
-                        <li>Collaborated with product team to define technical requirements and roadmap</li>
+                        <li>Back-End Web Development, Amazon Web Services (AWS)</li>
                     </ul>
                 </div>
             </div>
@@ -571,16 +552,34 @@
             <div class="experience-item">
                 <div class="experience-header">
                     <div>
-                        <div class="experience-title">Junior Developer</div>
-                        <div class="company">Digital Agency Co.</div>
+                        <div class="experience-title">Software Engineer Intern</div>
+                        <div class="company">Asurion · Internship</div>
                     </div>
-                    <div class="date">2016 - 2018</div>
+                    <div class="date">May 2021 - Aug 2021</div>
                 </div>
                 <div class="description">
                     <ul>
-                        <li>Developed and maintained client websites using WordPress and custom PHP applications</li>
-                        <li>Participated in agile development process and sprint planning</li>
-                        <li>Provided technical support and bug fixes for production applications</li>
+                        <li>Developed back-end application services to facilitate automation of program deployments with Jenkins.</li>
+                        <li>Created command line scripts to update metadata on 182 resources to fulfill CloudWatch requirements using Lambda functions.</li>
+                        <li>Collaborated via pair programming to create a form using ReactJS and Javascript, adding value to the company by saving customer solutions team time and resources to update the database for 300+ UBreakIFix stores.</li>
+                        <li>Asurion was recognized in the <a href="https://www.nationalinternday.com/2021-top-100-internship-programs" target="_blank" rel="noopener noreferrer">Top 100 Internship Programs of 2021</a>.</li>
+                    </ul>
+                </div>
+            </div>
+
+            <div class="experience-item">
+                <div class="experience-header">
+                    <div>
+                        <div class="experience-title">Global Operations & Technology Analyst</div>
+                        <div class="company">Bank of America · Internship</div>
+                    </div>
+                    <div class="date">Jun 2020 - Aug 2020</div>
+                </div>
+                <div class="description">
+                    <ul>
+                        <li>Collaborated to develop time series prediction models for daily ATM volume estimation with visualizations.</li>
+                        <li>Utilized Pandas to rearrange large data sets to train machine learning algorithms in Python.</li>
+                        <li>Achieved performance of 8% mean absolute percent error on forecast models that incorporated external variables.</li>
                     </ul>
                 </div>
             </div>
@@ -593,42 +592,79 @@
             <div class="project-item">
                 <div class="experience-header">
                     <div>
-                        <div class="experience-title">Open Source CLI Tool</div>
+                        <div class="experience-title">Tic‑Tac‑Toe AI</div>
                     </div>
-                    <div class="date">2024</div>
+                    <div class="date">NOVEMBER 2022</div>
                 </div>
                 <div class="description">
-                    Built a command-line tool for developers to automate AWS resource management. 
-                    Written in Go, features include infrastructure provisioning, cost optimization analysis, 
-                    and automated backups. Over 500 stars on GitHub.
+                    Single-player tic‑tac‑toe using a Minimax AI. <a href="https://github.com/areyesce/tic-tac-toe" target="_blank" rel="noopener noreferrer">View repo</a>.
                 </div>
             </div>
 
             <div class="project-item">
                 <div class="experience-header">
                     <div>
-                        <div class="experience-title">Real-time Analytics Dashboard</div>
+                        <div class="experience-title">Weather Forecast API</div>
                     </div>
-                    <div class="date">2023</div>
+                    <div class="date">JANUARY 2023</div>
                 </div>
                 <div class="description">
-                    Developed a real-time analytics platform using React, WebSockets, and time-series database. 
-                    Processes millions of events per day with sub-second latency. Integrated with Grafana for 
-                    advanced visualization and alerting.
+                    Sends requests to Open‑Meteo public API for weather data. <a href="https://github.com/areyesce/exploreAPI/tree/main" target="_blank" rel="noopener noreferrer">See code</a>.
                 </div>
             </div>
 
             <div class="project-item">
                 <div class="experience-header">
                     <div>
-                        <div class="experience-title">E-commerce Platform Migration</div>
+                        <div class="experience-title">Blackjack Game</div>
                     </div>
-                    <div class="date">2022</div>
+                    <div class="date">OCTOBER 2022</div>
                 </div>
                 <div class="description">
-                    Led migration of legacy monolithic application to modern microservices architecture. 
-                    Achieved zero-downtime migration for 100K+ active users. Improved page load times by 40% 
-                    and reduced infrastructure costs by 30%.
+                    Command-line blackjack program. <a href="https://github.com/areyesce/blackjack-program" target="_blank" rel="noopener noreferrer">Play it</a>.
+                </div>
+            </div>
+        </section>
+
+        <!-- Research Section -->
+        <section class="section">
+            <h2 class="section-title">Research</h2>
+
+            <div class="project-item">
+                <div class="experience-header">
+                    <div>
+                        <div class="experience-title">Data Visualizations — Google Explore CSResearch</div>
+                    </div>
+                    <div class="date">Jan 2019 – May 2019</div>
+                </div>
+                <div class="description">
+                    Associated with Swarthmore College.
+                    <br>
+                    <ul>
+                        <li>Collaborated on writing SQL and Python programs to filter and analyze trends in AP syslog messages.</li>
+                        <li>Investigated resource issues based on Wi-Fi mobility trends on a college campus.</li>
+                        <li>Created visualizations of findings using Plotly and presented at a poster symposium at the University of Pennsylvania.</li>
+                    </ul>
+                    <a href="https://github.com/areyesce/data-visualizations" target="_blank" rel="noopener noreferrer">View repo</a>.
+                </div>
+            </div>
+
+            <div class="project-item">
+                <div class="experience-header">
+                    <div>
+                        <div class="experience-title">Transfer Learning for Image Classification</div>
+                    </div>
+                    <div class="date">SPRING 2022</div>
+                </div>
+                <div class="description">
+                    Associated with Swarthmore College.
+                    <br>
+                    <ul>
+                        <li>Convolutional neural networks: low-level filters convolutional layers extract are consistent across models for different image recognition tasks, making weights at these levels ideal for transfer learning.</li>
+                        <li>Explored transferring weights for different layers.</li>
+                        <li>Examined how the complexity of the task the initial classifier was trained on affects performance on a new task of differing complexity.</li>
+                    </ul>
+                    <a href="https://github.com/areyesce/transfer-learning-project" target="_blank" rel="noopener noreferrer">View repo</a>.
                 </div>
             </div>
         </section>
